Fix codes (#512)
Co-authored-by: Pasquale Spica <36746022+pasqualespica@users.noreply.github.com>
Co-authored-by: pagopa-github-bot <github-bot@pagopa.it>
Co-authored-by: gioelemella <128155546+gioelemella@users.noreply.github.com>